# kimm_husky_project

aruco_mapping/: CMakeLists.txt
aruco_mapping/data/: zed_left_uurmi.ini
aruco_mapping/include/: aruco_mapping.h
aruco_mapping/launch/: aruco_mapping.launch  ns0_aruco_mapping.launch  ns1_aruco_mapping.launch
aruco_mapping/src/: aruco_mapping.cpp  main.cpp
franka_ros/franka_control/config/: default_controllers.yaml  franka_control_node.yaml
franka_ros/franka_control/launch/: franka_control.launch
franka_ros/franka_description/robots/: panda_arm.urdf.xacro  panda_arm.xacro
husky/husky_base/launch/: base.launch
husky/husky_control/config/: control.yaml  localization.yaml  teleop_ps4.yaml
husky/husky_description_real/urdf/: decorations.urdf.xacro  husky.urdf.xacro  wheel.urdf.xacro
kimm_action_manager/: CMakeLists.txt  kimm_husky_controllers_plugin.xml  package.xml
kimm_action_manager/action/: Gripper.action  QR.action  SE3.action  SE3Array.action
kimm_action_manager/config/: kimm_action_manager.yaml
kimm_action_manager/include/kimm_action_manager/controller/: controller.hpp
kimm_action_manager/include/kimm_action_manager/real/: real.hpp
kimm_action_manager/include/kimm_action_manager/servers/: action_server_base.hpp  gripper_action_server.hpp  joint_posture_action_server.hpp  move_action_server.hpp  qr_action_server.hpp  se3_action_server.hpp  se3_array_action_server.hpp
kimm_action_manager/include/kimm_action_manager/simulation/: simulation.hpp
kimm_action_manager/launch/: ns0_real_robot.launch  ns0_simulation.launch  ns1_real_robot.launch  ns1_simulation.launch  ns2_real_robot.launch  ns2_simulation.launch  simulation.launch
kimm_action_manager/launch/include/: ns0.launch  ns1.launch
kimm_action_manager/python/: multi_simulation.py  ns0_real.py  ns0_simulation.py  ns1_real.py  ns1_simulation.py  ns2_simulation.py
kimm_action_manager/src/controller/: controller.cpp
kimm_action_manager/src/real/: real.cpp
kimm_action_manager/src/servers/: gripper_action_server.cpp  joint_posture_action_server.cpp  move_action_server.cpp  qr_action_server.cpp  se3_action_server.cpp  se3_array_action_server.cpp
kimm_action_manager/src/simulation/: simulation.cpp
kimm_hqp_controller/: CMakeLists.txt  package.xml
kimm_hqp_controller/include/kimm_hqp_controller/solver/: util.hpp
kimm_hqp_controller/src/solver/: solver_HQP_factory.cpp
kimm_husky_navigation/: CMakeLists.txt  package.xml
kimm_husky_navigation/config/: costmap_common.yaml  costmap_exploration.yaml  costmap_global_laser.yaml  costmap_global_laser_ns0.yaml  costmap_global_laser_ns1.yaml  costmap_global_laser_ns2.yaml  costmap_global_static.yaml  costmap_local.yaml  costmap_local_ns1.yaml  costmap_local_ns2.yaml  mapper_params_localization_ns0.yaml  mapper_params_localization_ns1.yaml  mapper_params_localization_ns2.yaml  mapper_params_online_async.yaml  mapper_params_online_async_ns0.yaml  mapper_params_online_async_ns1.yaml  mapper_params_online_async_ns2.yaml
kimm_husky_navigation/launch/: localization_ns0.launch  localization_ns1.launch  localization_ns2.launch  move_base_mapless_demo_ns0.launch  move_base_mapless_demo_ns1.launch  move_base_mapless_demo_ns2.launch  move_base_ns0.launch  move_base_ns1.launch  move_base_ns2.launch  online_async_ns0.launch  online_async_ns1.launch  online_async_ns2.launch
kimm_husky_viz/: CMakeLists.txt  package.xml
kimm_husky_viz/launch/: view_robot_ns0.launch  view_robot_ns1.launch  view_robot_ns2.launch  view_robots.launch
kimm_husky_viz/rviz/: robot_ns0.rviz  robot_ns1.rviz  robot_ns2.rviz  robots.rviz
kimm_robots_description/franka_panda_description/franka_single/: panda_arm_l.urdf
kimm_robots_description/franka_panda_description/robots/: panda_arm_hand_single.xml
kimm_robots_description/husky_description/husky_double/: double_husky_panda_hand.xml
kimm_robots_description/husky_description/husky_single/: husky_panda_rviz_ns0.urdf  husky_panda_rviz_ns1.urdf  single_husky_panda_ns1.xml
kimm_robots_description/husky_description/husky_single_welding/: husky_panda_rviz.urdf
kimm_robots_description/husky_description/robots/: l_husky_with_panda.xml  l_husky_with_panda_hand.xml
kimm_robots_description/husky_description/urdf/: husky.urdf.xacro
kimm_robots_description/scout_panda_description/: CMakeLists.txt  package.xml
kimm_robots_description/scout_panda_description/meshes/: wheel_type1.stl  wheel_type2.stl
kimm_robots_description/scout_panda_description/robots/: scout_panda_hand_free.urdf  scout_panda_ns2.xml  scout_panda_rviz_ns2.urdf  scout_with_panda_hand.xml
realsense-ros/realsense2_camera/launch/: ns0_rs_camera.launch  ns1_rs_camera.launch  ns2_rs_camera.launch
velodyne/velodyne_laserscan/src/: velodyne_laserscan.cpp
velodyne/velodyne_pointcloud/launch/: VLP16_points.launch  VLP16_points_ns0.launch  VLP16_points_ns1.launch  VLP16_points_ns2.launch
